Added login tests and code. swagger.json updated accordingly
