# controllers/authController.js
@@ -1,10 +1,13 @@
 // controllers/authController.js
 const userService = require('../services/userService');
+const jwt = require('jsonwebtoken');
+const passport = require('passport');
+require('dotenv').config(); // Load environment variables from .env
 
 // Register a new user
 const registerUser = async (req, res) => {
   const { username, email, password } = req.body;
-  
+
   try {
     // Check if the user already exists
     const existingUser = await userService.findUserByEmail(email);
@@ -21,6 +24,37 @@ const registerUser = async (req, res) => {
   }
 };
 
+const loginUser = (req, res, next) => {
+  passport.authenticate('local', { session: false }, (err, user, info) => {
+    if (err) {
+      console.error('Error during login:', err);
+      return res.status(500).json({ message: 'Server error' });
+    }
+    if (!user) {
+      console.error('Error during authentication:', info.message);
+      return res.status(401).json({ message: info.message || 'Invalid email or password' });
+    }
+
+    // User authenticated successfully, generate JWT token
+    const token = jwt.sign({ id: user.id, email: user.email }, process.env.JWT_SECRET, {
+      expiresIn: '1h',
+    });
+
+    // Send success response with the token
+    return res.status(200).json({
+      message: 'Login successful',
+      token,
+      user: {
+        id: user.id,
+        username: user.username,
+        email: user.email,
+        role: user.role,
+      },
+    });
+  })(req, res, next);  // Call authenticate as a middleware here
+};
+
 module.exports = {
   registerUser,
+  loginUser,
 };
