# routes/authRoutes.js
@@ -1,11 +1,13 @@
 // routes/authRoutes.js
 const express = require('express');
-const { registerUser } = require('../controllers/authController');
-const { validateUserRegistration } = require('../utils/validators');
+const { registerUser, loginUser } = require('../controllers/authController');
+const { validateUserRegistration, validateUserLogin } = require('../utils/validators');
 
 const router = express.Router();
 
 // Route for user registration
 router.post('/register', validateUserRegistration, registerUser);
+
+router.post('/login', validateUserLogin, loginUser);
 
 module.exports = router;
