# utils/validators.js
@@ -18,6 +18,21 @@ const validateUserRegistration = [
   }
 ];
 
+const validateUserLogin = [
+  body('email').notEmpty().withMessage('Email is required'),
+  body('email').isEmail().withMessage('Valid email is required'),
+  body('password').notEmpty().withMessage('Password is required'),
+  (req, res, next) => {
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      const errorMessage = errors.array().map(err => err.msg).join(', ');
+      return res.status(400).json({ message: errorMessage });
+    }
+    next();
+  }
+];
+
 module.exports = {
   validateUserRegistration,
+  validateUserLogin,
 };
